Database update continued.