@@ -3,52 +3,63 @@ package me.jadenp.notbounties.features.settings.databases.proxy;
 import com.google.common.io.ByteArrayDataInput;
 import com.google.common.io.ByteArrayDataOutput;
 import com.google.common.io.ByteStreams;
-import me.jadenp.notbounties.data.Bounty;
 import me.jadenp.notbounties.NotBounties;
-import me.jadenp.notbounties.data.player_data.PlayerData;
-import me.jadenp.notbounties.features.settings.databases.LocalData;
 import me.jadenp.notbounties.ui.PlayerSkin;
 import me.jadenp.notbounties.ui.SkinManager;
-import me.jadenp.notbounties.utils.BountyChange;
 import me.jadenp.notbounties.utils.DataManager;
 import me.jadenp.notbounties.utils.LoggedPlayers;
-import me.jadenp.notbounties.data.PlayerStat;
 import me.jadenp.notbounties.utils.tasks.SkinRequest;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.messaging.PluginMessageListener;
+import java.util.concurrent.*;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.*;
-import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.*;
+import java.sql.SQLException;
 
 public class ProxyMessaging implements PluginMessageListener {
+    // DTO for grouped transaction operations
+    public record DBOp(String sql, List<DBParam> params) {
+        public DBOp(String sql, List<DBParam> params) {
+            this.sql = sql;
+            this.params = params == null ? Collections.emptyList() : params;
+        }
+    }
+
+    // Database messaging support
+    public record DBParam(int index, ProxyMessaging.DBParam.Kind kind, Object value) {
+        public enum Kind {NULL, BYTES, INT, LONG, DOUBLE, STRING, BLOB}
+    }
+    public static class DBResponse {
+        public List<Map<String, Object>> rows; // for queries
+        public List<String> columns;
+        public int updateCount = 0; // for updates
+        public int[] batchCounts; // for batches
+        public String error; // if non-null indicates failure
+    }
+    private static final Map<Long, CompletableFuture<DBResponse>> PENDING_DB = new ConcurrentHashMap<>();
+    private static final java.util.concurrent.atomic.AtomicLong DB_ID = new java.util.concurrent.atomic.AtomicLong(1);
+
+    // Wire type tags for cell encoding
+    private static final byte TYPE_NULL = 0;
+    private static final byte TYPE_BYTES = 1;
+    private static final byte TYPE_INT = 2;
+    private static final byte TYPE_LONG = 3;
+    private static final byte TYPE_DOUBLE = 4;
+    private static final byte TYPE_STRING = 5;
+    private static final byte TYPE_BLOB = 6;
     private static boolean connectedBefore = false;
     protected static final String CHANNEL = "notbounties:main";
+    private static final String DATABASE_SUBCHANNEL = "Database";
 
-    private static List<Bounty> bountyCache;
-    private static Map<UUID, PlayerStat> statCache;
-    private static List<PlayerData> playerDataCache;
     private static final List<PreparedUpdateMessage> preparedUpdateMessage = Collections.synchronizedList(new LinkedList<>());
     private static long idCounter = 0;
     private static final int DUPLICATE_MESSAGE_THRESHOLD = 300;
     private static final Map<Integer, Long> hashedMessages = Collections.synchronizedMap(new HashMap<>());
 
-    /**
-     * Whether this server has up-to-date data. This server will not have up-to-date data if no players are online
-     * or a few seconds after the first player joins.
-     */
-    private static boolean dataSynced = false;
-
-    public static void setDataSynced(boolean dataSynced) {
-        ProxyMessaging.dataSynced = dataSynced;
-    }
-
-    public static boolean isDataSynced() {
-        return dataSynced;
-    }
 
     private static void setConnectedBefore() {
         ProxyMessaging.connectedBefore = true;
@@ -69,7 +80,7 @@ public class ProxyMessaging implements PluginMessageListener {
 
     @Override
     public void onPluginMessageReceived(@NotNull String channel, @NotNull Player player, byte @NotNull [] bytes) {
-        if (!channel.equals(CHANNEL) || !ProxyDatabase.isEnabled())
+        if (!channel.equals(CHANNEL) || !ProxySettings.isEnabled())
             return;
         setConnectedBefore();
         ByteArrayDataInput in = ByteStreams.newDataInput(bytes);
@@ -105,21 +116,18 @@ public class ProxyMessaging implements PluginMessageListener {
         switch (subChannel) {
             case "ReceiveConnection" -> receiveConnection(msgIn);
             case "PlayerList" -> receivePlayerList(msgIn);
+            case DATABASE_SUBCHANNEL -> receiveDatabase(msgIn);
             case "Forward" -> {
                 String subSubChannel = msgIn.readUTF();
                 NotBounties.debugMessage("Sub Channel: " + subSubChannel, false);
-                switch (subSubChannel) {
-                    case "BountyUpdate" -> receiveBountyUpdate(msgIn);
-                    case "StatUpdate" -> receiveStatUpdate(msgIn);
-                    case "PlayerDataUpdate" -> receivePlayerDataUpdate(msgIn);
-                    case "LogPlayer" -> {
-                        short numPlayers = msgIn.readShort();
-                        for (short i = 0; i < numPlayers; i++) {
-                            Map.Entry<UUID, String> entry = parsePlayerString(msgIn.readUTF());
-                            DataManager.getPlayerData(entry.getKey()).setPlayerName(entry.getValue());
-                        }
+                if (subSubChannel.equals("LogPlayer")) {
+                    short numPlayers = msgIn.readShort();
+                    for (short i = 0; i < numPlayers; i++) {
+                        Map.Entry<UUID, String> entry = parsePlayerString(msgIn.readUTF());
+                        DataManager.getPlayerData(entry.getKey()).setPlayerName(entry.getValue());
                     }
-                    default -> throw new IllegalStateException("Unknown message!");
+                } else {
+                    throw new IllegalStateException("Unknown message!");
                 }
             }
             case "PlayerSkin" -> {
@@ -164,64 +172,13 @@ public class ProxyMessaging implements PluginMessageListener {
     }
 
     private synchronized void receiveConnection(DataInputStream msgIn) throws IOException {
-        if (!ProxyDatabase.isDatabaseSynchronization()) {
+        if (!ProxySettings.isDatabaseSynchronization()) {
             return;
         }
-        short savedBounties = msgIn.readShort();
-        List<Bounty> bounties = new LinkedList<>();
-        for (short i = 0; i < savedBounties; i++) {
-            bounties.add(new Bounty(msgIn.readUTF()));
-        }
-        short savedStats = msgIn.readShort();
-        Map<UUID, PlayerStat> playerStatMap = new HashMap<>();
-        for (short i = 0; i < savedStats; i++) {
-            UUID uuid = null;
-            try {
-                uuid = UUID.fromString(msgIn.readUTF());
-            } catch (IllegalArgumentException e) {
-                Bukkit.getLogger().warning("[NotBounties] Invalid uuid in received proxy message.");
-            }
-            if (uuid != null)
-                playerStatMap.put(uuid, new PlayerStat(msgIn.readUTF()));
-        }
-        List<PlayerData> playerData = new LinkedList<>();
-        try {
-            short savedPlayerData = msgIn.readShort();
-            for (short i = 0; i < savedPlayerData; i++) {
-                playerData.add(PlayerData.fromJson(msgIn.readUTF()));
-            }
-        } catch (EOFException e) {
-            // proxy isn't updated
-            Bukkit.getLogger().severe("[NotBounties] Player data has not been transmitted from the proxy. Is the proxy NotBounties updated?");
-        }
-        short currentMessage;
-        short remainingMessages;
-        try {
-            currentMessage = msgIn.readShort();
-            remainingMessages = msgIn.readShort();
-            NotBounties.debugMessage("Received message count: " + currentMessage + " remaining: " + remainingMessages, false);
-        } catch (EOFException e) {
-            // proxy isn't updated
-            Bukkit.getLogger().severe("[NotBounties] Message count has not been transmitted from the proxy. Is the proxy NotBounties updated?");
-            currentMessage = 1;
-            remainingMessages = 0;
-        }
-        if (currentMessage == 1) {
-            bountyCache = bounties;
-            statCache = playerStatMap;
-            playerDataCache = playerData;
-        } else {
-            bountyCache.addAll(bounties);
-            statCache.putAll(playerStatMap);
-            playerDataCache.addAll(playerData);
-        }
-
-        if (remainingMessages == 0) {
-            DataManager.connectProxy(bountyCache, statCache, playerDataCache);
-        }
-        if (!preparedUpdateMessage.isEmpty() && !preparedUpdateMessage.get(0).isSending()) {
+        msgIn.readAllBytes();
+        if (!preparedUpdateMessage.isEmpty() && !preparedUpdateMessage.getFirst().isSending()) {
             // restart messages
-            preparedUpdateMessage.get(0).sendMessage(!Bukkit.isPrimaryThread());
+            preparedUpdateMessage.getFirst().sendMessage(!Bukkit.isPrimaryThread());
         }
 
     }
@@ -230,7 +187,7 @@ public class ProxyMessaging implements PluginMessageListener {
         short numSkins = msgIn.readShort();
         for (int i = 0; i < numSkins; i++) {
             UUID uuid = UUID.fromString(msgIn.readUTF());
-            String id = msgIn.readUTF();
+            msgIn.readUTF(); // id
             String url = msgIn.readUTF();
             SkinManager.saveSkin(uuid, new PlayerSkin(SkinManager.getTextureId(url), false));
         }
@@ -248,63 +205,7 @@ public class ProxyMessaging implements PluginMessageListener {
             Map.Entry<UUID, String> player = parsePlayerString(msgIn.readUTF());
             players.put(player.getKey(), player.getValue());
         }
-        ProxyDatabase.setDatabaseOnlinePlayers(players);
-    }
-
-    /**
-     * Received an update from another server with bounties that should be updated.
-     * @param msgIn The received message.
-     * @throws IOException If there was an error reading the message.
-     */
-    private void receiveBountyUpdate(DataInputStream msgIn) throws IOException {
-        // Forward BountyUpdate
-        short numBounties = msgIn.readShort();
-        LocalData localData = DataManager.getLocalData();
-        for (short i = 0; i < numBounties; i++) {
-            BountyChange.ChangeType changeType = BountyChange.ChangeType.valueOf(msgIn.readUTF());
-            Bounty bounty = new Bounty(msgIn.readUTF());
-            if (ProxyDatabase.isDatabaseSynchronization()) {
-                switch (changeType) {
-                    case ADD_BOUNTY -> localData.addBounty(bounty);
-                    case DELETE_BOUNTY -> localData.removeBounty(bounty);
-                    case NOTIFY -> localData.notifyBounty(bounty.getUUID());
-                    case REPLACE_BOUNTY -> localData.replaceBounty(bounty.getUUID(), bounty);
-                }
-            }
-        }
-    }
-
-    /**
-     * Received an update from another server with stats to be changed.
-     * @param msgIn The received message.
-     * @throws IOException If there was an error reading the message.
-     */
-    private void receiveStatUpdate(DataInputStream msgIn) throws IOException {
-        // Forward StatUpdate
-        short numStats = msgIn.readShort();
-        LocalData localData = DataManager.getLocalData();
-        for (short i = 0; i < numStats; i++) {
-            UUID uuid = UUID.fromString(msgIn.readUTF());
-            PlayerStat playerStat = new PlayerStat(msgIn.readUTF());
-            if (ProxyDatabase.isDatabaseSynchronization())
-                localData.addStats(uuid, playerStat);
-        }
-    }
-
-    /**
-     * Received an update from another server with player data to be changed.
-     * @param msgIn The received message.
-     * @throws IOException If there was an error reading the message.
-     */
-    private void receivePlayerDataUpdate(DataInputStream msgIn) throws IOException {
-        // Forward StatUpdate
-        short numData = msgIn.readShort();
-        LocalData localData = DataManager.getLocalData();
-        for (short i = 0; i < numData; i++) {
-            PlayerData playerData = PlayerData.fromJson(msgIn.readUTF());
-            if (ProxyDatabase.isDatabaseSynchronization())
-                localData.updatePlayerData(playerData);
-        }
+        ProxySettings.setDatabaseOnlinePlayers(players);
     }
 
     /**
@@ -313,7 +214,7 @@ public class ProxyMessaging implements PluginMessageListener {
      * @param data data to be sent
      */
     public static void sendMessage(String identifier, byte[] data) {
-        if (ProxyDatabase.isEnabled() && NotBounties.getInstance().isEnabled()) {
+        if (ProxySettings.isEnabled() && NotBounties.getInstance().isEnabled()) {
             if (Bukkit.isPrimaryThread()) {
                 if (!Bukkit.getOnlinePlayers().isEmpty()) {
                     sendMessage(identifier, data, Bukkit.getOnlinePlayers().iterator().next());
@@ -337,42 +238,6 @@ public class ProxyMessaging implements PluginMessageListener {
      */
     public static void sendMessage(String identifier, byte[] data, Player player) {
         player.sendPluginMessage(NotBounties.getInstance(), identifier, data);
-    }
-
-    /**
-     * Send data changes to the proxy.
-     *
-     * @param bountyChanges Bounties to be changed.
-     */
-    public static void sendBountyUpdate(List<BountyChange> bountyChanges) {
-        // send proxy message
-        NotBounties.debugMessage("Sending Bounty Update of " + bountyChanges.size() + " changes.", false);
-        List<String[]> encoded = new LinkedList<>();
-        for (BountyChange bountyChange : bountyChanges)
-            encoded.add(new String[]{bountyChange.changeType().toString(), bountyChange.change().toJson().toString()});
-        addPreparedUpdateMessage(new PreparedUpdateMessage("BountyUpdate", encoded, idCounter++));
-    }
-
-    /**
-     * Send data changes to the proxy.
-     *
-     * @param statChanges Stats to be changed.
-     */
-    public static void sendStatUpdate(Map<UUID, PlayerStat> statChanges) {
-        // send proxy message
-        NotBounties.debugMessage("Sending Stat Update of " + statChanges.size() + " changes.", false);
-        List<String[]> encoded = new LinkedList<>();
-        for (Map.Entry<UUID, PlayerStat> entry : statChanges.entrySet())
-            encoded.add(new String[]{entry.getKey().toString(), entry.getValue().toJson().toString()});
-        addPreparedUpdateMessage(new PreparedUpdateMessage("StatUpdate", encoded, idCounter++));
-    }
-
-    public static void sendPlayerDataUpdate(List<PlayerData> playerDataList) {
-        NotBounties.debugMessage("Sending PlayerData Update of " + playerDataList.size() + " changes.", false);
-        List<String[]> encoded = new LinkedList<>();
-        for (PlayerData playerData : playerDataList)
-            encoded.add(new String[]{playerData.toJson().toString()});
-        addPreparedUpdateMessage(new PreparedUpdateMessage("PlayerDataUpdate", encoded, idCounter++));
     }
 
     /**
@@ -442,7 +307,7 @@ public class ProxyMessaging implements PluginMessageListener {
      * @param uuid UUID of the player
      */
     public static void requestPlayerSkin(UUID uuid) {
-        if (ProxyDatabase.areSkinRequestsEnabled()) {
+        if (ProxySettings.areSkinRequestsEnabled()) {
             NotBounties.getServerImplementation().global().run(() -> {
                 if (Bukkit.getOnlinePlayers().isEmpty()) {
                     SkinManager.failRequest(uuid);
@@ -483,8 +348,8 @@ public class ProxyMessaging implements PluginMessageListener {
             for (int i = 0; i < preparedUpdateMessage.size(); i++) {
                 if (preparedUpdateMessage.get(i).getId() == id) {
                     preparedUpdateMessage.remove(i);
-                    if (!preparedUpdateMessage.isEmpty() && !preparedUpdateMessage.get(0).isSending())
-                        preparedUpdateMessage.get(0).sendMessage(!Bukkit.isPrimaryThread());
+                    if (!preparedUpdateMessage.isEmpty() && !preparedUpdateMessage.getFirst().isSending())
+                        preparedUpdateMessage.getFirst().sendMessage(!Bukkit.isPrimaryThread());
                     return;
                 }
             }
@@ -517,10 +382,202 @@ public class ProxyMessaging implements PluginMessageListener {
 
     public static void addPreparedUpdateMessage(PreparedUpdateMessage updateMessage) {
         synchronized (preparedUpdateMessage) {
-            if (preparedUpdateMessage.isEmpty() && !DataManager.getLocalData().getOnlinePlayers().isEmpty()) {
+            if (preparedUpdateMessage.isEmpty() && isAnyPlayerOnline()) {
                 updateMessage.sendMessage(!Bukkit.isPrimaryThread());
             }
             preparedUpdateMessage.add(updateMessage);
+        }
+    }
+
+    private static boolean isAnyPlayerOnline() {
+        return !DataManager.getLocalOnlinePlayers().isEmpty();
+    }
+
+
+    // ===== Database proxy driver messaging =====
+    private static void receiveDatabase(DataInputStream in) throws IOException {
+        String op = in.readUTF();
+        long requestId = in.readLong();
+        DBResponse resp = new DBResponse();
+        switch (op) {
+            case "Result" -> {
+                int colCount = in.readUnsignedShort();
+                List<String> cols = new ArrayList<>(colCount);
+                for (int i = 0; i < colCount; i++) cols.add(in.readUTF());
+                int rowCount = in.readInt();
+                List<Map<String, Object>> rows = new ArrayList<>(Math.max(0, rowCount));
+                for (int r = 0; r < rowCount; r++) {
+                    Map<String, Object> row = new LinkedHashMap<>();
+                    for (int c = 0; c < colCount; c++) {
+                        byte t = in.readByte();
+                        Object v;
+                        switch (t) {
+                            case TYPE_NULL -> v = null;
+                            case TYPE_BYTES, TYPE_BLOB -> {
+                                int len = in.readInt();
+                                byte[] b = new byte[len];
+                                in.readFully(b);
+                                v = b;
+                            }
+                            case TYPE_INT -> v = in.readInt();
+                            case TYPE_LONG -> v = in.readLong();
+                            case TYPE_DOUBLE -> v = in.readDouble();
+                            case TYPE_STRING -> v = in.readUTF();
+                            default -> throw new IOException("Unknown cell type: " + t);
+                        }
+                        row.put(cols.get(c), v);
+                    }
+                    rows.add(row);
+                }
+                resp.columns = cols;
+                resp.rows = rows;
+            }
+            case "Update" -> resp.updateCount = in.readInt();
+            case "Batch" -> {
+                int n = in.readInt();
+                int[] counts = new int[n];
+                for (int i = 0; i < n; i++) counts[i] = in.readInt();
+                resp.batchCounts = counts;
+            }
+            case "Error" -> resp.error = in.readUTF();
+            default -> {}
+        }
+        CompletableFuture<DBResponse> fut = PENDING_DB.remove(requestId);
+        if (fut != null) fut.complete(resp);
+    }
+
+    private static void writeParam(DataOutputStream out, DBParam p) throws IOException {
+        out.writeShort(p.index);
+        switch (p.kind) {
+            case NULL -> { out.writeByte(TYPE_NULL); out.writeInt(p.value instanceof Integer i ? i : java.sql.Types.NULL); }
+            case BYTES -> { out.writeByte(TYPE_BYTES); byte[] b = (byte[]) p.value; out.writeInt(b.length); out.write(b); }
+            case INT -> { out.writeByte(TYPE_INT); out.writeInt((Integer) p.value); }
+            case LONG -> { out.writeByte(TYPE_LONG); out.writeLong((Long) p.value); }
+            case DOUBLE -> { out.writeByte(TYPE_DOUBLE); out.writeDouble((Double) p.value); }
+            case STRING -> { out.writeByte(TYPE_STRING); out.writeUTF((String) p.value); }
+            case BLOB -> { out.writeByte(TYPE_BLOB); byte[] b = (byte[]) p.value; out.writeInt(b.length); out.write(b); }
+        }
+    }
+
+    public static DBResponse requestExecuteQuery(String sql, List<DBParam> params, int timeoutMs) throws SQLException {
+        long id = DB_ID.getAndIncrement();
+        CompletableFuture<DBResponse> fut = new CompletableFuture<>();
+        PENDING_DB.put(id, fut);
+        try {
+            ByteArrayOutputStream msgBytes = new ByteArrayOutputStream();
+            DataOutputStream msgout = new DataOutputStream(msgBytes);
+            msgout.writeUTF("ExecuteQuery");
+            msgout.writeLong(id);
+            msgout.writeUTF(sql);
+            msgout.writeShort(params == null ? 0 : params.size());
+            if (params != null) {
+                for (DBParam p : params) writeParam(msgout, p);
+            }
+            ByteArrayDataOutput out = ByteStreams.newDataOutput();
+            out.writeUTF(DATABASE_SUBCHANNEL);
+            out.writeShort(msgBytes.size());
+            out.write(msgBytes.toByteArray());
+            sendMessage(CHANNEL, out.toByteArray());
+            DBResponse resp = fut.get(timeoutMs, TimeUnit.MILLISECONDS);
+            if (resp.error != null) throw new SQLException(resp.error);
+            return resp;
+        } catch (Exception e) {
+            PENDING_DB.remove(id);
+            throw new SQLException("Database request failed", e);
+        }
+    }
+
+    public static DBResponse requestExecuteUpdate(String sql, List<DBParam> params, int timeoutMs) throws SQLException {
+        long id = DB_ID.getAndIncrement();
+        CompletableFuture<DBResponse> fut = new CompletableFuture<>();
+        PENDING_DB.put(id, fut);
+        try {
+            ByteArrayOutputStream msgBytes = new ByteArrayOutputStream();
+            DataOutputStream msgout = new DataOutputStream(msgBytes);
+            msgout.writeUTF("ExecuteUpdate");
+            msgout.writeLong(id);
+            msgout.writeUTF(sql);
+            msgout.writeShort(params == null ? 0 : params.size());
+            if (params != null) {
+                for (DBParam p : params) writeParam(msgout, p);
+            }
+            ByteArrayDataOutput out = ByteStreams.newDataOutput();
+            out.writeUTF(DATABASE_SUBCHANNEL);
+            out.writeShort(msgBytes.size());
+            out.write(msgBytes.toByteArray());
+            sendMessage(CHANNEL, out.toByteArray());
+            DBResponse resp = fut.get(timeoutMs, TimeUnit.MILLISECONDS);
+            if (resp.error != null) throw new SQLException(resp.error);
+            return resp;
+        } catch (Exception e) {
+            PENDING_DB.remove(id);
+            throw new SQLException("Database request failed", e);
+        }
+    }
+
+    public static DBResponse requestExecuteBatch(String sql, List<List<DBParam>> batches, int timeoutMs) throws SQLException {
+        long id = DB_ID.getAndIncrement();
+        CompletableFuture<DBResponse> fut = new CompletableFuture<>();
+        PENDING_DB.put(id, fut);
+        try {
+            ByteArrayOutputStream msgBytes = new ByteArrayOutputStream();
+            DataOutputStream msgout = new DataOutputStream(msgBytes);
+            msgout.writeUTF("ExecuteBatch");
+            msgout.writeLong(id);
+            msgout.writeUTF(sql);
+            msgout.writeInt(batches == null ? 0 : batches.size());
+            if (batches != null) {
+                for (List<DBParam> ps : batches) {
+                    msgout.writeShort(ps == null ? 0 : ps.size());
+                    if (ps != null) for (DBParam p : ps) writeParam(msgout, p);
+                }
+            }
+            ByteArrayDataOutput out = ByteStreams.newDataOutput();
+            out.writeUTF(DATABASE_SUBCHANNEL);
+            out.writeShort(msgBytes.size());
+            out.write(msgBytes.toByteArray());
+            sendMessage(CHANNEL, out.toByteArray());
+            DBResponse resp = fut.get(timeoutMs, TimeUnit.MILLISECONDS);
+            if (resp.error != null) throw new SQLException(resp.error);
+            return resp;
+        } catch (Exception e) {
+            PENDING_DB.remove(id);
+            throw new SQLException("Database request failed", e);
+        }
+    }
+
+    public static DBResponse requestExecuteTransaction(List<DBOp> ops, int timeoutMs) throws SQLException {
+        long id = DB_ID.getAndIncrement();
+        CompletableFuture<DBResponse> fut = new CompletableFuture<>();
+        PENDING_DB.put(id, fut);
+        try {
+            // Build the ExecuteTransaction payload (Database subchannel inner message)
+            ByteArrayOutputStream msgBytes = new ByteArrayOutputStream();
+            DataOutputStream msgout = new DataOutputStream(msgBytes);
+            msgout.writeUTF("ExecuteTransaction");
+            msgout.writeLong(id);
+            int count = ops == null ? 0 : ops.size();
+            msgout.writeInt(count);
+            if (ops != null) {
+                for (DBOp op : ops) {
+                    msgout.writeUTF(op.sql);
+                    List<DBParam> ps = op.params;
+                    msgout.writeShort(ps == null ? 0 : ps.size());
+                    if (ps != null) for (DBParam p : ps) writeParam(msgout, p);
+                }
+            }
+            msgout.flush();
+
+            // Send via PreparedUpdateMessage with sequencing so the proxy can reassemble large transactions
+            PreparedUpdateMessage prepared = PreparedUpdateMessage.createSequenced(DATABASE_SUBCHANNEL, msgBytes.toByteArray(), idCounter++);
+            addPreparedUpdateMessage(prepared);
+
+            DBResponse resp = fut.get(timeoutMs, TimeUnit.MILLISECONDS);
+            if (resp.error != null) throw new SQLException(resp.error);
+            return resp;
+        } catch (Exception e) {
+            PENDING_DB.remove(id);
+            throw new SQLException("Database request failed", e);
         }
     }
 
